# skillpulse

./: .gitignore  .mailmap  CHANGELOG.md  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py  integrations.py  simulate.py
skillguard/: __init__.py  attribution.py  cli.py  health.py  ingest.py  lifecycle.py  models.py  reporting.py  store.py
skillpulse/: __init__.py  attribution.py  cli.py  health.py  lifecycle.py  models.py  replay.py  reporting.py  store.py
skillpulse/integrations/: __init__.py  base.py  http.py  langfuse.py  mapping.py  models.py  phoenix.py  sync.py
tests/: test_attribution.py  test_ingest.py  test_skillguard.py  test_skillpulse.py  test_v02.py
tests/integration/real/: __init__.py  seed_langfuse.py  seed_phoenix.py  test_real_providers.py
tests/integrations/: conftest.py  test_cli_end_to_end.py  test_langfuse.py  test_mapping_sync.py  test_phoenix.py
