[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpulse"
version = "0.3.0"
description = "Runtime reliability for Agent Skills with degradation detection, root-cause attribution, offline replay, and canary validation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Feng Haohuan" }]
keywords = ["llm", "agent", "skills", "degradation-detection", "lifecycle"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
skillpulse = "skillpulse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillpulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
